2007-0m-dd Laurent Laville <pear@laurent-laville.org>

    * VERSION: Final version (alpha) 2.3.0a1 released.

      - drop support of cell id mask identifier (begin private)
        style should be apply only by cell classname attribute
      - a progress bar widget (div) is now identified only by {see HTML_Progress2::getIdent()}
        rather than "tfrm" + {HTML_Progress2::getIdent()}

2007-01-03 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Final version (stable) 2.2.0 released.

      - add new function importStyle() to give ability to import an existing stylesheet
        and separate PHP code from HTML layout (with CSS)
      - improved javascript custom handler for JavaDanse example
        related to version 2.1.1 (bug fixed #8684)
      - Copyright bumped to 2007
      - Include a new fresh version of User Guide (TDG) that cover all versions 2.x.x

2006-12-22 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Final version (stable) 2.1.1 released.

      - used now :
        "className" property rather than "visibility"
        reduced div tags count used to build a progress bar (only 10 rather than 20 )
      - apply more CS (space code indent, ...)
      - add "alt" attribute to img html-tag to be more xhtml compliant
      - JS function "hideProgress" lose its second parameter (no more needed)

2006-12-20 Laurent Laville <pear@laurent-laville.org>

      - fixed bug #8684 : Problem with generated JavaScript
      - fixed "examples/generatorcus.php" to use new architecture with
        external stylesheet introduced on August 11, 2006.

2006-08-12 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Final version (stable) 2.1.0 released.

      - The Definitive Guide has a new FAQ up-to-date, new examples (see
        Appendixes section) and finally a guide for HTML_Progress2_Generator

2006-08-11 Laurent Laville <pear@laurent-laville.org>

      - HTMLPage2, ITDynamic, and SmartyDynamic renderers for Progress2 Generator